--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     }
   ],
   "require": {
-    "php": "^7.1.3"
+    "php": "^7.3",
+    "ext-pcntl": "*",
+    "ext-posix": "*"
   },
   "autoload": {
     "classmap": [
@@ -19,7 +21,7 @@
     ],
     "psr-4": {
       "App\\": "./app",
-      "Console\\": "./src"
+      "Wanglelecc\\": "./src"
     },
     "files" : [
       "./app/helpers.php"
