编写说明文档

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "wanglelecc/php-process",
   "description": "Multi process manager for PHP",
   "type": "project",
-  "homepage": "https://www.laracms.cn/",
+  "homepage": "https://php-process.56br.com/",
   "license": "MIT",
   "authors": [
     {
